# semantic

./: .atom-build.yml  .bazelignore  .bazelrc  .dockerignore  .ghci  .ghci-template  .ghci.repl  .ghci.sample  .ghci.semantic  .gitattributes  .gitignore  .gitmodules  .hie-bios.sh  .hie-dispatch.sh  .hlint.yaml  .hspec  .licensed.yml  .stylish-haskell.yaml  .travis.yml  BUILD.bazel  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Diff.hs  Dockerfile  Dockerfile.base  Dockerfile.release  HACKING.md  HLint.hs  Q2FY2018.md  README.md  ROADMAP.md  SemRush.RakutenMarketing.io  Setup.hs  Syntax.hs  Untitled  WORKSPACE  cabal.project  cabal.project.ci  cabal.project.release-build.freeze  (+30 more)
semantic-analysis/: .ghci.repl  .gitignore  BUILD.bazel  README.md  cabal.project  hie.yaml  python.tsg  semantic-analysis.cabal
semantic-analysis/script/: ghci-flags  repl
semantic-analysis/src/Analysis/: Analysis.hs  Blob.hs  Concrete.hs  Domain.hs  Exception.hs  File.hs  FlowInsensitive.hs  ImportGraph.hs  Intro.hs  Language.hs  Module.hs  Name.hs  Project.hs  Reference.hs  ScopeGraph.hs  Syntax.hs  Typecheck.hs  VM.hs
semantic-analysis/test/: Doctest.hs
semantic-ast/: BUILD.bazel  CHANGELOG.md  LICENSE  README.md  semantic-ast.cabal
semantic-ast/app/: Main.hs
semantic-ast/src/: CLI.hs  Main.hs
semantic-ast/src/AST/: Deserialize.hs  Element.hs  GenerateSyntax.hs  Parse.hs  SymbolMatching.hs  Test.hs  TestHelpers.hs  Token.hs  Traversable1.hs  Unmarshal.hs
semantic-ast/src/Marshal/: Examples.hs  JSON.hs
semantic-ast/test/Test/: Helpers.hs
semantic-c/: BUILD.bazel  README.md  semantic-c.cabal
semantic-c/src/Language/: C.hs
semantic-c/test/: PreciseTest.hs
semantic-cli/: .gitignore  CHANGELOG.md  LICENSE  README.md  semantic-cli.cabal
semantic-cli/app/: Main.hs
semantic-codeql/: BUILD.bazel  CHANGELOG.md  README.md  semantic-codeql.cabal
semantic-codeql/src/Language/: CodeQL.hs
semantic-codeql/test/: PreciseTest.hs
semantic-core/: BUILD.bazel  README.md  semantic-core.cabal
semantic-core/src/Analysis/: Analysis.hs  Concrete.hs  Eval.hs  FlowInsensitive.hs  ImportGraph.hs  ScopeGraph.hs  Typecheck.hs
semantic-core/src/Core/: Core.hs  Eval.hs  Expr.hs  File.hs  Loc.hs  Name.hs  Parser.hs  Pretty.hs  Scope.hs  Stack.hs  Term.hs
semantic-core/src/Data/: Core.hs  File.hs  Loc.hs  Name.hs  Scope.hs  Stack.hs  Term.hs
semantic-core/src/Language/: Preface.hs
semantic-core/src/Semantic/: Core.hs  Eval.hs  Name.hs
semantic-core/test/: Doctest.hs  Generators.hs  Graph.hs  Spec.hs  Test.hs
semantic-core/test/fixtures/: conditional.score  simple.score
semantic-diff/: semantic-diff.cabal
semantic-diff/src/Data/: Algebra.hs
semantic-diff/src/Diffing/: Interpreter.hs
semantic-go/: BUILD.bazel  README.md  semantic-go.cabal
semantic-go/src/Language/: Go.hs
semantic-go/test/: PreciseTest.hs  Test.hs
semantic-java/: BUILD.bazel  README.md  semantic-java.cabal
semantic-java/src/Language/: Java.hs
semantic-java/test/: PreciseTest.hs  Test.hs
semantic-json/: BUILD.bazel  README.md  semantic-json.cabal
semantic-json/src/Language/: JSON.hs
semantic-json/test/: PreciseTest.hs  Test.hs
semantic-ocaml/: BUILD.bazel  README.md  semantic-ocaml.cabal
semantic-ocaml/src/Language/: OCaml.hs
semantic-ocaml/test/: PreciseTest.hs
semantic-parse/: BUILD.bazel  CHANGELOG.md  README.md  semantic-parse.cabal
semantic-parse/app/: Main.hs
semantic-php/: BUILD.bazel  CHANGELOG.md  LICENSE  README.md  semantic-php.cabal
semantic-php/src/Language/: PHP.hs
semantic-proto/: BUILD.bazel  README.md  semantic-proto.cabal
semantic-proto/src/Proto/: Semantic.hs  Semantic_Fields.hs  Semantic_JSON.hs
semantic-python/: BUILD.bazel  README.md  calculator.py  semantic-python.cabal
semantic-python/app/: Main.hs  VizPythonGraph.hs
semantic-python/bench/: Bench.hs
semantic-python/src/: Prelude.sc  Prelude.score
semantic-python/src/Language/: Python.hs
semantic-python/test/: CoreTest.hs  Directive.hs  Instances.hs  Main.hs  PreciseTest.hs  ScopeDump.hs  Test.hs
semantic-python/test-graphing/: GraphTest.hs
semantic-python/test-stack-graph/: StackTest.hs
semantic-python/test/fixtures/: 1-01-empty-module.py  1-02-pass-statement.py  1-03-empty-tuple.py  1-04-toplevel-assignment.py  1-05-eval-statement-fails.py  1-05-exec-statement-fails.py  2-01-function-definition.py  2-01-return-statement.py  2-02-local-values.py  2-02-return-doesnt-translate.py  2-03-nested-functions.py  2-03-return-in-if-statement.py  2-04-closures.py  2-04-multiple-assign.py  2-05-function-call.py  2-05-function-invocation.py  2-06-nested-function-definition.py  2-07-closure-over-scope.py  2-08-function-decorator.py  3-01-empty-class-definition.py  3-01-type-of-type.py  3-02-boolean.py  3-02-defining-instance-method.py  3-03-functions-know-their-own-names.py  3-03-instantiation.py  3-04-subclassing.py  3-05-super.py  4-01-lambda-literals.py  4-01-local-redef.py  4-02-nonetype.py  4-02-type-unsafe-redef.py  4-03-not-expression.py  4-03-toplevel-redefinition.py  5-01-simple-reference.py  5-02-simple-function.py  5-03-function-argument.py  5-04-factorial.py
semantic-ruby/: BUILD.bazel  README.md  semantic-ruby.cabal
semantic-ruby/app/: Main.hs
semantic-ruby/bench/: Main.hs  Parsing.hs
semantic-ruby/src/Language/: Ruby.hs
semantic-ruby/test/: PreciseTest.hs  Test.hs
semantic-rust/: BUILD.bazel  README.md  semantic-rust.cabal
semantic-rust/src/Language/: Rust.hs
semantic-rust/test/: Test.hs  tags-examples.rs
semantic-scope-graph/: BUILD.bazel  CHANGELOG.md  README.md  semantic-scope-graph.cabal
semantic-scope-graph/app/: Main.hs
semantic-scope-graph/src/Convert/: ToScopeGraph.hs
semantic-scope-graph/src/Data/: Hole.hs  Module.hs  Name.hs  ScopeGraph.hs  ScopeGraph.hs.old
semantic-scope-graph/src/Scope/: Info.hs  Scope.hs  Types.hs
semantic-source/: BUILD.bazel  CHANGELOG.md  README.md  cabal.project  cabal.project.ci  semantic-source.cabal
semantic-source/Data/: Languages.hs
semantic-source/src/: Gen_Languages.hs
semantic-source/test/: Doctest.hs  Test.hs
(+6628 files in other folders)
