name:                semantic-diff
version:             0.3.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/github/semantic-diff#readme
author:              Rob Rix, Josh Vera
maintainer:          rob.rix@github.com
copyright:           2016 GitHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Algorithm
                     , Alignment
                     , Category
                     , Data.Align.Generic
                     , Data.Blob
                     , Data.Diff
                     , Data.Error
                     , Data.Functor.Both
                     , Data.Functor.Classes.Eq.Generic
                     , Data.Functor.Classes.Ord.Generic
                     , Data.Functor.Classes.Show.Generic
                     , Data.JSON.Fields
                     , Data.Mergeable
                     , Data.Output
                     , Data.Patch
                     , Data.Range
                     , Data.Record
                     , Data.Source
                     , Data.Span
                     , Data.SplitDiff
                     , Data.Syntax
                     , Data.Syntax.Algebra
                     , Data.Syntax.Assignment
                     , Data.Syntax.Assignment.Table
                     , Data.Syntax.Comment
                     , Data.Syntax.Declaration
                     , Data.Syntax.Expression
                     , Data.Syntax.Literal
                     , Data.Syntax.Markup
                     , Data.Syntax.Statement
                     , Data.Syntax.Type
                     , Data.Term
                     , Files
                     , Info
                     , Interpreter
                     , Language
                     , Language.Markdown
                     , Language.Markdown.Syntax
                     , Language.Go
                     , Language.Go.Syntax
                     , Language.JSON.Grammar
                     , Language.JSON.Syntax
                     , Language.Ruby
                     , Language.Ruby.Grammar
                     , Language.Ruby.Syntax
                     , Language.TypeScript
                     , Language.TypeScript.Grammar
                     , Language.TypeScript.Syntax
                     , Language.Python
                     , Language.Python.Grammar
                     , Language.Python.Syntax
                     , Parser
                     , Paths_semantic_diff
                     , Renderer
                     , Renderer.JSON
                     , Renderer.Patch
                     , Renderer.SExpression
                     , Renderer.TOC
                     , RWS
                     , Semantic
                     , Semantic.Log
                     , Semantic.Task
                     , Semantic.Util
                     , SemanticCmdLine
                     , SES
                     , Syntax
                     , TreeSitter
  build-depends:       base >= 4.8 && < 5
                     , aeson
                     , ansi-terminal
                     , array
                     , async
                     , bifunctors
                     , bytestring
                     , cmark-gfm
                     , comonad
                     , containers
                     , directory
                     , effects
                     , filepath
                     , free
                     , freer-cofreer
                     , gitrev
                     , hashable
                     , kdt
                     , mersenne-random-pure64
                     , MonadRandom
                     , mtl
                     , optparse-applicative
                     , parallel
                     , parsers
                     , recursion-schemes
                     , semigroups
                     , split
                     , stm-chans
                     , template-haskell
                     , text >= 1.2.1.3
                     , these
                     , time
                     , unix
                     , haskell-tree-sitter
                     , tree-sitter-go
                     , tree-sitter-json
                     , tree-sitter-python
                     , tree-sitter-ruby
                     , tree-sitter-typescript
                     , pretty-show
                     , hscolour
  default-language:    Haskell2010
  default-extensions:  DeriveFunctor, DeriveFoldable, DeriveTraversable, DeriveGeneric, FlexibleContexts, FlexibleInstances, OverloadedStrings, RecordWildCards, StrictData
  ghc-options:         -Wall -fno-warn-name-shadowing -O -j
  ghc-prof-options:    -fprof-auto

executable semantic
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -A4m -n2m" -static -j -O
  cc-options:          -DU_STATIC_IMPLEMENTATION=1
  cpp-options:         -DU_STATIC_IMPLEMENTATION=1
  build-depends:       base
                     , semantic-diff
  default-language:    Haskell2010
  default-extensions:  FlexibleInstances, OverloadedStrings, RecordWildCards

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       AlignmentSpec
                     , CommandSpec
                     , Data.Functor.Classes.Ord.Generic.Spec
                     , Data.Functor.Listable
                     , Data.Mergeable.Spec
                     , Data.RandomWalkSimilarity.Spec
                     , Data.Syntax.Assignment.Spec
                     , DiffSpec
                     , SemanticSpec
                     , SemanticCmdLineSpec
                     , InterpreterSpec
                     , PatchOutputSpec
                     , SES.Spec
                     , SourceSpec
                     , SpecHelpers
                     , TermSpec
                     , TOCSpec
                     , IntegrationSpec
                     , Test.Hspec.LeanCheck
  build-depends:       aeson
                     , array
                     , base
                     , bifunctors
                     , bytestring
                     , comonad
                     , effects
                     , filepath
                     , free
                     , Glob
                     , haskell-tree-sitter
                     , hspec >= 2.4.1
                     , hspec-core
                     , hspec-expectations-pretty-diff
                     , HUnit
                     , leancheck
                     , mtl
                     , containers
                     , recursion-schemes >= 4.1
                     , semantic-diff
                     , text >= 1.2.1.3
                     , these
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N -j
  default-language:    Haskell2010
  default-extensions:  DeriveFunctor, DeriveGeneric, FlexibleContexts, FlexibleInstances, OverloadedStrings, RecordWildCards

source-repository head
  type:     git
  location: https://github.com/github/semantic-diff
