name:                semantic-diff
version:             0.3.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/github/semantic-diff#readme
author:              Rob Rix, Josh Vera
maintainer:          rob.rix@github.com
copyright:           2016 GitHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                     -- Analyses & term annotations
                       Abstract.Interpreter
                     , Abstract.Interpreter.Caching
                     , Abstract.Interpreter.Tracing
                     , Analysis.Abstract.Dead
                     , Analysis.ConstructorName
                     , Analysis.CyclomaticComplexity
                     , Analysis.Decorator
                     , Analysis.Declaration
                     -- Semantic assignment
                     , Assigning.Assignment
                     , Assigning.Assignment.Table
                     , Category
                     -- Control flow
                     , Control.Effect
                     , Control.Monad.Effect.Dead
                     , Control.Monad.Effect.Env
                     , Control.Monad.Effect.Fresh
                     , Control.Monad.Effect.GC
                     , Control.Monad.Effect.Store
                     -- General datatype definitions & generic algorithms
                     , Data.Abstract.Address
                     , Data.Abstract.Configuration
                     , Data.Abstract.Environment
                     , Data.Abstract.Eval
                     , Data.Abstract.FreeVariables
                     , Data.Abstract.Store
                     , Data.Abstract.Type
                     , Data.Abstract.Value
                     , Data.Algebra
                     , Data.Align.Generic
                     , Data.AST
                     , Data.Blob
                     , Data.Diff
                     , Data.Error
                     , Data.Functor.Both
                     , Data.Functor.Classes.Eq.Generic
                     , Data.Functor.Classes.Ord.Generic
                     , Data.Functor.Classes.Show.Generic
                     , Data.JSON.Fields
                     , Data.Language
                     , Data.Mergeable
                     , Data.Output
                     , Data.Patch
                     , Data.Range
                     , Data.Record
                     , Data.Source
                     , Data.Span
                     , Data.SplitDiff
                     -- À la carte syntax types
                     , Data.Syntax
                     , Data.Syntax.Comment
                     , Data.Syntax.Declaration
                     , Data.Syntax.Expression
                     , Data.Syntax.Literal
                     , Data.Syntax.Statement
                     , Data.Syntax.Type
                     , Data.Term
                     -- Diffing algorithms & interpretation thereof
                     , Diffing.Algorithm
                     , Diffing.Algorithm.RWS
                     , Diffing.Algorithm.RWS.FeatureVector
                     , Diffing.Algorithm.SES
                     , Diffing.Interpreter
                     , Info
                     -- Language-specific grammar/syntax types, & assignments
                     , Language.Markdown.Assignment
                     , Language.Markdown.Syntax
                     , Language.Go
                     , Language.Go.Grammar
                     , Language.Go.Assignment
                     , Language.Go.Syntax
                     , Language.Go.Type
                     , Language.JSON.Grammar
                     , Language.JSON.Assignment
                     , Language.Ruby.Grammar
                     , Language.Ruby.Assignment
                     , Language.TypeScript.Assignment
                     , Language.TypeScript.Grammar
                     , Language.TypeScript.Syntax
                     , Language.Python.Assignment
                     , Language.Python.Assignment2
                     , Language.Python.Grammar
                     , Language.Python.Syntax
                     -- Parser glue
                     , Parsing.CMark
                     , Parsing.Parser
                     , Parsing.TreeSitter
                     , Paths_semantic_diff
                     -- Rendering formats
                     , Rendering.JSON
                     , Rendering.Renderer
                     , Rendering.SExpression
                     , Rendering.Tag
                     , Rendering.TOC
                     -- High-level flow & operational functionality (logging, stats, etc.)
                     , Semantic
                     , Semantic.CLI
                     , Semantic.IO
                     , Semantic.Log
                     , Semantic.Stat
                     , Semantic.Task
                     , Semantic.Queue
                     , Semantic.Util
                     , Syntax
  build-depends:       base >= 4.8 && < 5
                     , aeson
                     , ansi-terminal
                     , array
                     , async
                     , bifunctors
                     , bytestring
                     , cmark-gfm
                     , comonad
                     , containers
                     , directory
                     , effects
                     , filepath
                     , free
                     , freer-cofreer
                     , ghc-prim
                     , gitrev
                     , Glob
                     , hashable
                     , kdt
                     , mersenne-random-pure64
                     , mtl
                     , network
                     , network-uri
                     , optparse-applicative
                     , parallel
                     , parsers
                     , pointed
                     , recursion-schemes
                     , semigroups
                     , split
                     , stm-chans
                     , template-haskell
                     , text >= 1.2.1.3
                     , these
                     , time
                     , unix
                     , haskell-tree-sitter
                     , tree-sitter-go
                     , tree-sitter-json
                     , tree-sitter-python
                     , tree-sitter-ruby
                     , tree-sitter-typescript
  default-language:    Haskell2010
  default-extensions:  DeriveFunctor, DeriveFoldable, DeriveTraversable, DeriveGeneric, FlexibleContexts, FlexibleInstances, OverloadedStrings, RecordWildCards, StrictData
  ghc-options:         -Wall -fno-warn-name-shadowing -O -j
  ghc-prof-options:    -fprof-auto

executable semantic
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -A4m -n2m" -static -j -O
  cc-options:          -DU_STATIC_IMPLEMENTATION=1
  cpp-options:         -DU_STATIC_IMPLEMENTATION=1
  build-depends:       base
                     , semantic-diff
  default-language:    Haskell2010
  default-extensions:  FlexibleInstances, OverloadedStrings, RecordWildCards

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Assigning.Assignment.Spec
                     , Data.Diff.Spec
                     , Data.Functor.Classes.Ord.Generic.Spec
                     , Data.Functor.Listable
                     , Data.Mergeable.Spec
                     , Data.Source.Spec
                     , Data.Term.Spec
                     , Diffing.Algorithm.RWS.Spec
                     , Diffing.Algorithm.SES.Spec
                     , Diffing.Interpreter.Spec
                     , Integration.Spec
                     , Rendering.TOC.Spec
                     , Semantic.Spec
                     , Semantic.CLI.Spec
                     , Semantic.IO.Spec
                     , Semantic.Stat.Spec
                     , SpecHelpers
                     , Test.Hspec.LeanCheck
  build-depends:       aeson
                     , array
                     , base
                     , bifunctors
                     , bytestring
                     , comonad
                     , effects
                     , filepath
                     , free
                     , Glob
                     , haskell-tree-sitter
                     , hspec >= 2.4.1
                     , hspec-core
                     , hspec-expectations-pretty-diff
                     , HUnit
                     , leancheck
                     , mtl
                     , network
                     , containers
                     , recursion-schemes >= 4.1
                     , semantic-diff
                     , text >= 1.2.1.3
                     , these
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N -j
  default-language:    Haskell2010
  default-extensions:  DeriveFunctor, DeriveGeneric, FlexibleContexts, FlexibleInstances, OverloadedStrings, RecordWildCards

source-repository head
  type:     git
  location: https://github.com/github/semantic-diff
